Adição de autenticação - JWT

--- a/appsettings.json
+++ b/appsettings.json
@@ -6,6 +6,14 @@
         "Default": "Warning"
       }
     },
+    "ConnectionStrings": {
+      "myconnection": "***"
+    },
+    "TokenConfigurations": {
+      "Audience": "http://localhost:5000",
+      "Issuer": "http://localhost:5000",
+      "Seconds": 120
+    },
     "Console": {
       "LogLevel": {
         "Default": "Warning"
